Fix the Mobile Reality Problem and the Default Scrollbar Problem under Windows

--- a/src/components/ResourceMoneyMarket/ResourceCurrencyChart/ResourceCurrencyChart.less
+++ b/src/components/ResourceMoneyMarket/ResourceCurrencyChart/ResourceCurrencyChart.less
@@ -1,7 +1,7 @@
 .select-button {
     margin-left: 50px;
     position: absolute;
-    z-index: 9;
+    z-index: 1;
     top: 40px;
 }
 
