--- a/src/components/ResourceMoneyMarket/ResourceMoneyMarket.less
+++ b/src/components/ResourceMoneyMarket/ResourceMoneyMarket.less
@@ -33,4 +33,7 @@
     .resource-market-body  {
         margin: 20px;
     }
+    .resource-body {
+        padding: 0 0;
+    }
 }
